--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ click = "^8.1.3"
 inquirer = "^3.2.4"
 appdirs = "^1.4.4"
 pyyaml = "^6.0.1"
+sqlfluff = "^2.3.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.0.1"
